--- a/DigitalEx2/EDA.ipynb
+++ b/DigitalEx2/EDA.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "popt, pcov = curve_fit(model, x_bod, y_bod)\n",
     "\n",
-    "print(popt)\n",
+    "print(f\"popt: {popt}\")\n",
     "\n",
     "residuals = y_bod - model(x_bod, *popt)\n",
     "\n",
