--- a/DigitalEx3/uppg1.ipynb
+++ b/DigitalEx3/uppg1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,50 @@
     "\n",
     "import pickle\n",
     "from scipy.optimize import curve_fit\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.integrate import solve_ivp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data: {'data1': {'time': array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+      "       17, 18, 19, 20]), 'conc': array([2.2       , 1.71291325, 1.33353908, 1.03808545, 0.80797303,\n",
+      "       0.62893919, 0.48961121, 0.38112818, 0.29664189, 0.23090987,\n",
+      "       0.17975665, 0.13992836, 0.10890994, 0.08477664, 0.06599614,\n",
+      "       0.05137365, 0.0399855 , 0.03112504, 0.02422992, 0.01886161,\n",
+      "       0.01468345])}, 'data2': {'time': array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+      "       17, 18, 19, 20]), 'conc': array([2.25376671, 1.89630175, 1.1076544 , 1.12430278, 0.83984956,\n",
+      "       0.49817036, 0.44625201, 0.41539063, 0.65448159, 0.50785358,\n",
+      "       0.04476796, 0.44342071, 0.18145036, 0.07847115, 0.13747043,\n",
+      "       0.03087704, 0.02757107, 0.1800948 , 0.16513337, 0.16058085,\n",
+      "       0.08183316])}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20]),\n",
+       " array([2.2       , 1.71291325, 1.33353908, 1.03808545, 0.80797303,\n",
+       "        0.62893919, 0.48961121, 0.38112818, 0.29664189, 0.23090987,\n",
+       "        0.17975665, 0.13992836, 0.10890994, 0.08477664, 0.06599614,\n",
+       "        0.05137365, 0.0399855 , 0.03112504, 0.02422992, 0.01886161,\n",
+       "        0.01468345]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('Prob3Data.pickle', 'rb') as f:\n",
     "    data = pickle.load(f)\n",
@@ -32,9 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20]),\n",
+       " array([2.25376671, 1.89630175, 1.1076544 , 1.12430278, 0.83984956,\n",
+       "        0.49817036, 0.44625201, 0.41539063, 0.65448159, 0.50785358,\n",
+       "        0.04476796, 0.44342071, 0.18145036, 0.07847115, 0.13747043,\n",
+       "        0.03087704, 0.02757107, 0.1800948 , 0.16513337, 0.16058085,\n",
+       "        0.08183316]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time_2 = data['data2']['time']\n",
     "conc_2 = data['data2']['conc']\n",
@@ -44,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f5acab8790>"
+       "<matplotlib.legend.Legend at 0x1c62eb6d850>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -78,47 +131,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "popt: [-4.70446102]\n"
+      "popt: [0.2504184]\n",
+      "least_square_error: 0.0013734498488388567\n"
      ]
     }
    ],
    "source": [
+    "def model(t, c, k):\n",
+    "    dcdt = -k * c\n",
+    "    return dcdt\n",
+    "\n",
+    "def fit_func(t, k):\n",
+    "    sol = solve_ivp(model, t_span=(t[0], t[-1]), y0=[c_0], t_eval=t, args=(k,))\n",
+    "    return sol.y[0]\n",
+    "\n",
+    "def fit_model(time, conc, c_0, k_guess):\n",
+    "    popt, pcov = curve_fit(fit_func, time, conc, p0=[k_guess], )\n",
+    "    return popt, pcov\n",
+    "\n",
     "k = 0.1\n",
     "c_0 = 2.2\n",
     "\n",
-    "def model(t, c):\n",
-    "    dcdt = -k*c\n",
-    "    return dcdt\n",
+    "popt, pcov = fit_model(time, conc, c_0, k)\n",
+    "print(f\"popt: {popt}\")\n",
     "\n",
-    "popt, pcov = curve_fit(model, time, conc, p0=[c_0])\n",
-    "print(f\"popt: {popt}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "popt2: [-5.36937813]\n"
-     ]
-    }
-   ],
-   "source": [
-    "c_02 = 1.8\n",
+    "least_square_error = np.sqrt(sum((conc - fit_func(time, *popt))**2))\n",
     "\n",
-    "popt2, pcov2 = curve_fit(model, time_2, conc_2, p0=[c_02])\n",
-    "print(f\"popt2: {popt2}\")"
+    "print(f\"least_square_error: {least_square_error}\")\n",
+    "\n",
+    "\n",
+    "popt_2, pcov_2 = fit_model(time_2, conc_2, c_0, k)\n"
    ]
   }
  ],
