--- a/DigitalEx3/uppg1.ipynb
+++ b/DigitalEx3/uppg1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "        0.01468345]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "        0.08183316]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c62eb6d850>"
+       "<matplotlib.legend.Legend at 0x1a641b94590>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,9 @@
      "output_type": "stream",
      "text": [
       "popt: [0.2504184]\n",
-      "least_square_error: 0.0013734498488388567\n"
+      "least_square_error: 2.420244927408832\n",
+      "popt2: [0.18454089]\n",
+      "least_square_error2: 2.242896584431635\n"
      ]
     }
    ],
@@ -148,26 +150,50 @@
     "    dcdt = -k * c\n",
     "    return dcdt\n",
     "\n",
-    "def fit_func(t, k):\n",
-    "    sol = solve_ivp(model, t_span=(t[0], t[-1]), y0=[c_0], t_eval=t, args=(k,))\n",
+    "def fit_func(t, c_0, k):\n",
+    "    sol = solve_ivp(lambda t,c: model(t,c,k), t_span=(t[0], t[-1]), y0=[c_0], t_eval=t )\n",
     "    return sol.y[0]\n",
     "\n",
     "def fit_model(time, conc, c_0, k_guess):\n",
-    "    popt, pcov = curve_fit(fit_func, time, conc, p0=[k_guess], )\n",
-    "    return popt, pcov\n",
-    "\n",
+    "    popt, pcov = curve_fit(lambda t,k : fit_func(t, c_0, k), time, conc, p0=[k_guess], )\n",
+    "    return popt, pcov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "popt: [0.2504184]\n",
+      "least_square_error: 2.420244927408832\n",
+      "popt2: [0.18454089]\n",
+      "least_square_error2: 2.242896584431635\n"
+     ]
+    }
+   ],
+   "source": [
     "k = 0.1\n",
-    "c_0 = 2.2\n",
+    "c_01 = 2.2\n",
     "\n",
-    "popt, pcov = fit_model(time, conc, c_0, k)\n",
+    "popt, pcov = fit_model(time, conc, c_01, k)\n",
     "print(f\"popt: {popt}\")\n",
     "\n",
-    "least_square_error = np.sqrt(sum((conc - fit_func(time, *popt))**2))\n",
+    "least_square_error = np.sqrt(sum((conc - fit_func(time, c_01, k))**2))\n",
     "\n",
     "print(f\"least_square_error: {least_square_error}\")\n",
     "\n",
+    "c_02 = 1.8\n",
+    "popt2, pcov2 = fit_model(time_2, conc_2, c_02, k)\n",
     "\n",
-    "popt_2, pcov_2 = fit_model(time_2, conc_2, c_0, k)\n"
+    "print(f\"popt2: {popt2}\")\n",
+    "\n",
+    "least_square_error2 = np.sqrt(sum((conc_2 - fit_func(time_2, c_01, k))**2))\n",
+    "\n",
+    "print(f\"least_square_error2: {least_square_error2}\")"
    ]
   }
  ],
