--- a/DigitalEx5/uppg4.ipynb
+++ b/DigitalEx5/uppg4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-320. -400.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Objective function\n",
     "c = np.array([-.16*2000, -.2*2000])"
@@ -31,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -55,19 +47,19 @@
       "        message: Optimization terminated successfully. (HiGHS Status 7: Optimal)\n",
       "        success: True\n",
       "         status: 0\n",
-      "            fun: -2640.0\n",
-      "              x: [ 2.000e+00  5.000e+00]\n",
+      "            fun: -3280.0\n",
+      "              x: [ 4.000e+00  5.000e+00]\n",
       "            nit: -1\n",
-      "          lower:  residual: [ 2.000e+00  5.000e+00]\n",
+      "          lower:  residual: [ 4.000e+00  5.000e+00]\n",
       "                 marginals: [ 0.000e+00  0.000e+00]\n",
       "          upper:  residual: [       inf        inf]\n",
       "                 marginals: [ 0.000e+00  0.000e+00]\n",
       "          eqlin:  residual: []\n",
       "                 marginals: []\n",
-      "        ineqlin:  residual: [ 4.000e+03  0.000e+00  6.000e+02]\n",
-      "                 marginals: [ 0.000e+00  0.000e+00  0.000e+00]\n",
-      " mip_node_count: 1\n",
-      " mip_dual_bound: -2640.0\n",
+      "        ineqlin:  residual: [ 0.000e+00  0.000e+00]\n",
+      "                 marginals: [ 0.000e+00  0.000e+00]\n",
+      " mip_node_count: 0\n",
+      " mip_dual_bound: -3280.0\n",
       "        mip_gap: 0.0\n"
      ]
     }
@@ -85,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
