--- a/Project2/kod.ipynb
+++ b/Project2/kod.ipynb
@@ -304,20 +304,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.17647058823529413\n"
+      "-0.17647058823529413\n",
+      "0.17647058823529413\n"
      ]
     }
    ],
    "source": [
-    "print(x_lb)\n",
-    "print(x_ub)"
+    "# 11\n",
+    "def obj_segments(u, params, print_vals=False):\n",
+    "    z, c, T, Tw, x1, x2 = sim_segments(u, params)\n",
+    "    J = 1 - x1\n",
+    "    Q = J[-1]\n",
+    "    if print_vals == True:\n",
+    "        pass\n",
+    "        # print(u, Q)\n",
+    "    return Q\n",
+    "\n",
+    "\n",
+    "def const_segments(u, params):\n",
+    "    z, c, T, Tw, x1, x2 = sim_segments(u, params)\n",
+    "    con = np.hstack(([params[\"T_ub\"] - T, T - params[\"T_lb\"]]))\n",
+    "    return con\n",
+    "\n",
+    "\n",
+    "con_segments = {\"type\": \"ineq\", \"fun\": lambda u: const_segments(u, params)}\n",
+    "\n",
+    "# 12\n",
+    "bounds_segments = [[x_lb, x_ub]] * 10\n",
+    "print(\"=\" * 100)\n",
+    "\n",
+    "init_guess = (x_ub - x_lb) / 2 * np.ones(10)\n",
+    "init_guess_2 = x_ub * np.ones(10)\n",
+    "\n",
+    "\n",
+    "# 13\n",
+    "res = minimize(\n",
+    "    lambda u: obj_segments(u, params, print_vals=False),\n",
+    "    x0=init_guess,\n",
+    "    bounds=bounds_segments,\n",
+    "    method=\"SLSQP\",\n",
+    "    constraints=con_segments,\n",
+    ")\n",
+    "# print(f\"res.x: {res.x}\")\n",
+    "conversion = 1 - res.fun\n",
+    "# print(f\"conversion = {conversion}\")\n",
+    "Tjackets = params[\"Tin\"] * (1 + res.x)\n",
+    "# print(f\"Tjackets = {Tjackets}\")\n",
+    "combined = np.vstack((Tjackets, res.x)).T\n",
+    "np.set_printoptions(suppress=True)\n",
+    "print(f\"combined = {combined}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 14\n",
+    "z, c, T, Tw, x1, x2 = sim_segments(res.x, params)\n",
+    "fig = plt.figure()\n",
+    "ax1 = fig.add_subplot(2, 1, 1)\n",
+    "ax1.plot(z, c)\n",
+    "ax1.hlines(y=params[\"c_lb\"], xmin=z[0], xmax=z[-1], color=\"black\", linestyle=\"--\")\n",
+    "ax1.hlines(y=params[\"c_ub\"], xmin=z[0], xmax=z[-1], color=\"black\", linestyle=\"--\")\n",
+    "ax1.set_xlabel(\"Reactor length [m]\")\n",
+    "ax1.set_ylabel(\"Concentration [mol/L]\")\n",
+    "ax1.set_title(\"Concentration profile\")\n",
+    "ax2 = plt.subplot(2, 1, 2)\n",
+    "ax2.plot(z, T, label=\"T\")\n",
+    "# Create an array of coordinates for each segment's end points\n",
+    "segments = np.linspace(0, 1, len(Tw) + 1)\n",
+    "# Plot the segments as a stair diagram. See matplotlib's documentation for more info!\n",
+    "ax2.stairs(Tw, segments, color=\"tab:orange\", baseline=None, label=\"Tw\")\n",
+    "ax2.hlines(y=params[\"T_lb\"], xmin=z[0], xmax=z[-1], color=\"black\", linestyle=\"--\")\n",
+    "ax2.hlines(y=params[\"T_ub\"], xmin=z[0], xmax=z[-1], color=\"black\", linestyle=\"--\")\n",
+    "ax2.set_xlabel(\"Reactor length [m]\")\n",
+    "ax2.set_ylabel(\"Temperature [K]\")\n",
+    "ax2.set_title(\"Temperature profile\")\n",
+    "ax2.legend()\n",
+    "fig.tight_layout()"
    ]
   }
  ],
