--- a/DigitalEx7/uppg4.ipynb
+++ b/DigitalEx7/uppg4.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +73,13 @@
      "output_type": "stream",
      "text": [
       "========== depth = 1 ============\n",
-      "|--- feature_0 <= 65.00\n",
+      "text rep: |--- feature_0 <= 65.00\n",
       "|   |--- value: [994.56]\n",
       "|--- feature_0 >  65.00\n",
       "|   |--- value: [967.75]\n",
       "\n",
       "========== depth = 2 ============\n",
-      "|--- feature_0 <= 65.00\n",
+      "text rep: |--- feature_0 <= 65.00\n",
       "|   |--- feature_0 <= 35.00\n",
       "|   |   |--- value: [998.70]\n",
       "|   |--- feature_0 >  35.00\n",
@@ -91,7 +91,7 @@
       "|   |   |--- value: [961.50]\n",
       "\n",
       "========== depth = 3 ============\n",
-      "|--- feature_0 <= 65.00\n",
+      "text rep: |--- feature_0 <= 65.00\n",
       "|   |--- feature_0 <= 35.00\n",
       "|   |   |--- feature_0 <= 15.00\n",
       "|   |   |   |--- value: [999.83]\n",
@@ -115,7 +115,7 @@
       "|   |   |   |--- value: [958.00]\n",
       "\n",
       "========== depth = 5 ============\n",
-      "|--- feature_0 <= 65.00\n",
+      "text rep: |--- feature_0 <= 65.00\n",
       "|   |--- feature_0 <= 35.00\n",
       "|   |   |--- feature_0 <= 15.00\n",
       "|   |   |   |--- feature_0 <= 7.50\n",
@@ -155,10 +155,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c03fda8730>"
+       "<matplotlib.legend.Legend at 0x1c03dd75760>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
