--- a/Project4/training.ipynb
+++ b/Project4/training.ipynb
@@ -63,7 +63,7 @@
     "# Data transformations (you might need to adjust these based on your dataset)\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
+    "    transforms.ToTensor()\n",
     "])\n",
     "\n",
     "# Load data\n",
