--- a/Project4/raw_data_preprocessing.ipynb
+++ b/Project4/raw_data_preprocessing.ipynb
@@ -38,7 +38,7 @@
     "for file in files:\n",
     "    formats.add(file.split('.')[-1])\n",
     "\n",
-    "print(f\"Unique formats of the images are {formats}\")\n"
+    "print(f\"Unique formats of the images are {formats}\")"
    ]
   },
   {
